--- a/app/src/main/res/layout/bike_screen.xml
+++ b/app/src/main/res/layout/bike_screen.xml
@@ -89,7 +89,7 @@
                             android:backgroundTint="@android:color/transparent"
                             app:strokeWidth="1dp"
                             app:strokeColor="@color/secondaryText"
-                            android:layout_marginEnd="16dp" />
+                            android:paddingHorizontal="16dp"/>
 
                         <!-- Get Directions Button -->
                         <Button
@@ -101,7 +101,9 @@
                             android:drawableLeft="@drawable/map_pin"
 
                             android:textColor="@color/darkText"
-                            android:backgroundTint="@color/LightBlue"/>
+                            android:backgroundTint="@color/LightBlue"
+                            android:paddingLeft="12dp"
+                            android:paddingRight="16dp"/>
 
                     </LinearLayout>
 
