--- a/app/src/main/res/layout/public_transit_screen.xml
+++ b/app/src/main/res/layout/public_transit_screen.xml
@@ -91,7 +91,9 @@
                             android:drawableLeft="@drawable/map_pin"
 
                             android:textColor="@color/darkText"
-                            android:backgroundTint="@color/LightBlue"/>
+                            android:backgroundTint="@color/LightBlue"
+                            android:paddingLeft="12dp"
+                            android:paddingRight="16dp"/>
 
                     </LinearLayout>
 
