--- a/app/src/main/res/layout/public_transit_screen.xml
+++ b/app/src/main/res/layout/public_transit_screen.xml
@@ -2,8 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/bkgSurface">
 
     <!-- Top App Bar -->
@@ -20,89 +22,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Scrollable View with Cards -->
-    <ScrollView
-        android:id="@+id/scrollViewTransit"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/TransitAppBar"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
-
-        <!-- Container for Cards -->
-        <LinearLayout
-            android:id="@+id/cardContainerTransit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp">
-
-            <!-- Sample CardView -->
-            <com.google.android.material.card.MaterialCardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                app:cardCornerRadius="8dp"
-                app:strokeColor="@android:color/transparent">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="16dp">
-
-                    <!-- Card Title -->
-                    <TextView
-                        android:id="@+id/cardTitle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Transit stop name"
-                        android:textColor="@color/darkText"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
-
-                    <!-- Card Description -->
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Type of Transit"
-                        android:textColor="@color/secondaryText"
-                        android:textSize="14sp" />
-
-                    <!-- Buttons for Directions and Website -->
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_marginTop="16dp"
-                        android:gravity="end">
-
-
-
-                        <!-- Get Directions Button -->
-                        <Button
-                            android:id="@+id/directionsButton"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="16dp"
-                            android:text="Directions"
-                            android:drawableLeft="@drawable/map_pin"
-
-                            android:textColor="@color/darkText"
-                            android:backgroundTint="@color/LightBlue"
-                            android:paddingLeft="12dp"
-                            android:paddingRight="16dp"/>
-
-                    </LinearLayout>
-
-                </LinearLayout>
-            </com.google.android.material.card.MaterialCardView>
-
-            <!-- Repeat the CardView structure for additional cards -->
-
-        </LinearLayout>
-    </ScrollView>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/TransitAppBar"
+        app:layout_constraintVertical_bias="0.437"
+        tools:listitem="@layout/card_transit" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
