updating to make list views

--- a/app/src/main/res/layout/card_bike.xml
+++ b/app/src/main/res/layout/card_bike.xml
@@ -8,6 +8,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         app:cardCornerRadius="8dp"
+        android:background="@color/bkgSection"
         app:strokeColor="@android:color/transparent">
 
         <LinearLayout
