--- a/app/src/main/res/layout/bike_screen.xml
+++ b/app/src/main/res/layout/bike_screen.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/apk/tools"
-
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/bkgSurface">
 
     <!-- Top App Bar -->
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/BikeAppBar"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/bkgSection"
         android:contentInsetStart="0dp"
@@ -31,7 +31,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/BikeAppBar"
-        app:layout_constraintVertical_bias="0.437"
-        tools:listitem="@layout/card_transit" />
+        tools:listitem="@layout/card_bike" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
