--- a/app/src/main/res/layout/card_transit.xml
+++ b/app/src/main/res/layout/card_transit.xml
@@ -7,6 +7,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="16dp"
     app:cardCornerRadius="8dp"
+    android:background="@color/bkgSection"
     app:strokeColor="@android:color/transparent">
 
         <LinearLayout
