--- a/app/src/main/res/layout/bike_screen.xml
+++ b/app/src/main/res/layout/bike_screen.xml
@@ -27,9 +27,8 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="16dp"
         app:layout_constraintTop_toBottomOf="@id/BikeAppBar"
         tools:listitem="@layout/card_bike" />
 
