--- a/app/src/main/res/layout/card_bike.xml
+++ b/app/src/main/res/layout/card_bike.xml
@@ -6,16 +6,17 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
         app:cardCornerRadius="8dp"
         android:background="@color/bkgSection"
-        app:strokeColor="@android:color/transparent">
+        app:strokeColor="@android:color/transparent"
+        android:layout_marginBottom="16dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="16dp">
+            android:padding="16dp"
+            >
 
             <!-- Card Title -->
             <TextView
