--- a/app/src/main/res/layout/public_transit_screen.xml
+++ b/app/src/main/res/layout/public_transit_screen.xml
@@ -27,6 +27,8 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="16dp"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="16dp"
         tools:listitem="@layout/card_transit" />
 
 </LinearLayout>
