--- a/app/src/main/res/layout/activity_search_main.xml
+++ b/app/src/main/res/layout/activity_search_main.xml
@@ -1,54 +1,45 @@
-<androidx.constraintlayout.widget.ConstraintLayout
+<?xml version="1.0" encoding="utf-8"?>
+
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@color/bkgSurface">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/topAppBar"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:contentInsetStart="0dp"
         app:navigationIcon="@drawable/smalllogo"
         app:title="Green Trek Traveler"
         app:titleCentered="true"
-        app:titleTextAppearance="@style/ToolbarTitleTextStyle"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:titleTextAppearance="@style/ToolbarTitleTextStyle"/>
 
     <ImageView
         android:id="@+id/welcomeImage"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="180dp"
         android:scaleType="centerCrop"
         android:src="@drawable/welcome"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        android:contentDescription="Woman riding bike in field"
-        app:layout_constraintTop_toBottomOf="@id/topAppBar"/>
+        android:contentDescription="Woman riding bike in field"/>
 
     <LinearLayout
         android:id="@+id/searchLayout"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="24dp"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/welcomeImage">
+        android:orientation="vertical">
 
         <Button
             android:id="@+id/locationSearch"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_marginTop="16dp"
             android:layout_marginHorizontal="16dp"
             android:backgroundTint="#0D000000"
@@ -60,17 +51,16 @@
             android:gravity="start|center_vertical"
             android:drawableLeft="@drawable/search"
             android:drawableTint="#555555"
-            android:drawablePadding="0dp"
-            />
+            android:drawablePadding="0dp"/>
+
         <Button
             android:id="@+id/dateSearch"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_marginTop="16dp"
             android:layout_marginHorizontal="16dp"
             android:backgroundTint="#0D000000"
-            android:text="Date"
+            android:text="Travel Date"
             android:textSize="16sp"
             android:textColor="#555555"
             android:paddingVertical="4dp"
@@ -78,9 +68,7 @@
             android:gravity="start|center_vertical"
             android:drawableLeft="@drawable/date"
             android:drawableTint="#555555"
-            android:drawablePadding="0dp"
-            />
-
+            android:drawablePadding="0dp"/>
 
         <Button
             android:id="@+id/rightAlignedButton"
@@ -91,7 +79,7 @@
             android:layout_marginHorizontal="16dp"
             android:backgroundTint="@color/Teal"
             android:text="Search"
-            android:textColor="@color/inverseText" />
+            android:textColor="@color/inverseText"/>
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
