--- a/app/src/main/res/layout/activity_search_main.xml
+++ b/app/src/main/res/layout/activity_search_main.xml
@@ -55,6 +55,7 @@
 
         <Button
             android:id="@+id/dateSearch"
+            android:onClick="goToCalendarView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
