--- a/app/src/main/res/layout/activity_location_search.xml
+++ b/app/src/main/res/layout/activity_location_search.xml
@@ -16,9 +16,24 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/topAppBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary"
+            android:contentInsetStart="0dp"
+            android:padding="0dp"
+            app:title=""
+            app:titleCentered="false"
+            app:navigationIcon="@drawable/back_arrow"
+            app:titleTextAppearance="@style/ToolbarTitleTextStyle"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <android.widget.SearchView
             android:id="@+id/search"
+            android:layout_below="@id/topAppBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clickable="true"
