--- a/app/src/main/res/layout/activity_search_main.xml
+++ b/app/src/main/res/layout/activity_search_main.xml
@@ -39,6 +39,7 @@
         <Button
             android:id="@+id/locationSearch"
             android:layout_width="match_parent"
+            android:onClick="goToLocationView"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginHorizontal="16dp"
