--- a/app/src/main/res/layout/activity_search_main.xml
+++ b/app/src/main/res/layout/activity_search_main.xml
@@ -79,8 +79,9 @@
             android:layout_gravity="end"
             android:layout_marginTop="16dp"
             android:layout_marginHorizontal="16dp"
-            android:backgroundTint="@color/Teal"
+            android:backgroundTint="#888888"
             android:text="Search"
+            android:clickable="false"
             android:textColor="@color/inverseText"/>
     </LinearLayout>
 </LinearLayout>
