--- a/app/src/main/res/layout/activity_search_main.xml
+++ b/app/src/main/res/layout/activity_search_main.xml
@@ -82,6 +82,7 @@
             android:backgroundTint="#888888"
             android:text="Search"
             android:clickable="false"
+            android:onClick="goToCityView"
             android:textColor="@color/inverseText"/>
     </LinearLayout>
 </LinearLayout>
