--- a/app/src/main/res/layout/places_screen.xml
+++ b/app/src/main/res/layout/places_screen.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
+    android:id="@+id/main"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -173,6 +174,7 @@
                     android:paddingHorizontal="16dp"
                     android:layout_gravity="end"
                     android:text="@string/see_more"
+                    android:id="@+id/goToBikeButton"
                     android:textColor="@color/Teal"
                     android:textSize="14sp"
                     android:textStyle="bold"
@@ -316,6 +318,7 @@
 
             <!-- "See More" TextView -->
             <TextView
+                android:id="@+id/goToTransitButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingHorizontal="16dp"
