--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -25,7 +25,7 @@
         android:orientation="vertical"
         android:padding="16dp"
         android:gravity="center"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -38,17 +38,16 @@
             android:src="@drawable/bike"
             android:paddingHorizontal="16dp"
             android:layout_gravity="start"
-            android:layout_marginBottom="16dp" />
+            android:layout_marginBottom="8dp"/>
 
         <!-- Linear Progress Bar -->
         <ProgressBar
             android:id="@+id/progress_bar"
             style="@android:style/Widget.ProgressBar.Horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="8dp"
             android:progress="20"
-            android:progressTint="#23707A"
-            android:backgroundTint="#FFFFFF"
+            android:progressDrawable="@drawable/progressbar"
             android:paddingStart="16dp"
             android:paddingEnd="16dp" />
 
