--- a/app/src/main/res/layout/cal_screen.xml
+++ b/app/src/main/res/layout/cal_screen.xml
@@ -34,7 +34,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/secondaryText"
-                android:text="Cancel"/>
+                android:text="Cancel"
+                android:layout_marginRight="16dp"/>
 
             <Button
                 android:id="@+id/okayButton"
