--- a/app/src/main/res/layout/info_screen.xml
+++ b/app/src/main/res/layout/info_screen.xml
@@ -26,7 +26,8 @@ android:layout_height="match_parent">
             app:cardCornerRadius="8dp"
             android:layout_marginBottom="24dp"
             android:padding="24dp"
-            android:backgroundTint="@color/bkgSection">
+            android:backgroundTint="@color/bkgSection"
+            app:strokeWidth="0dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -114,7 +115,9 @@ android:layout_height="match_parent">
             android:layout_marginBottom="24dp"
             android:padding="24dp"
             android:layout_marginHorizontal="16dp"
-            android:backgroundTint="@color/bkgSection">
+            android:backgroundTint="@color/bkgSection"
+            app:strokeWidth=".5dp"
+            app:strokeColor="#DDDDDD">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -179,7 +182,9 @@ android:layout_height="match_parent">
             android:layout_marginBottom="24dp"
             android:layout_marginHorizontal="16dp"
             android:padding="24dp"
-            android:backgroundTint="@color/bkgSection">
+            android:backgroundTint="@color/bkgSection"
+            app:strokeWidth=".5dp"
+            app:strokeColor="#DDDDDD">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -243,7 +248,9 @@ android:layout_height="match_parent">
             android:layout_marginHorizontal="16dp"
             android:layout_marginBottom="24dp"
             android:padding="24dp"
-            android:backgroundTint="@color/bkgSection">
+            android:backgroundTint="@color/bkgSection"
+            app:strokeWidth=".5dp"
+            app:strokeColor="#DDDDDD">
 
             <LinearLayout
                 android:layout_width="match_parent"
