--- a/app/src/main/res/layout/city_screen.xml
+++ b/app/src/main/res/layout/city_screen.xml
@@ -13,7 +13,7 @@
         android:background="?attr/colorPrimary"
         android:contentInsetStart="0dp"
         android:padding="0dp"
-        app:title="Tucson"
+        app:title="Tucson, AZ"
         app:titleCentered="false"
         app:navigationIcon="@drawable/back_arrow"
         app:titleTextAppearance="@style/ToolbarTitleTextStyle"
