--- a/app/src/main/res/layout/info_screen.xml
+++ b/app/src/main/res/layout/info_screen.xml
@@ -328,16 +328,23 @@ android:layout_height="match_parent">
             android:textColor="@color/secondaryText"
             android:textSize="14sp"
             android:layout_marginTop="4dp" />
-        <TextView
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/walkscoreLink"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingHorizontal="16dp"
-            android:layout_gravity="right"
+            android:layout_gravity="end"
             android:text="@string/walkscore_data"
+            android:layout_marginEnd="16dp"
             android:textColor="@color/Teal"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            android:layout_marginTop="4dp" />
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="32dp"
+            app:backgroundTint="@color/inverseText"
+            app:strokeColor="@color/Teal"
+            app:strokeWidth="1dp"
+            app:icon="@drawable/link"
+            app:iconTint="@color/Teal"
+            app:iconPadding="4dp"/>
     </LinearLayout>
 </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
